--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,7 @@
             
             <section class="container_welcome">
             <div class="img-header">
-                <img src="Images/greenpalmcoffee.jpg" alt="Two cup of coffee on a whood chair">
-                <img src="Images/palmcoffeeorganic.jpg" alt="Three cup of a coffee on a tabel">
+                <img src="Images/coffeepink.jpg" alt="calm pink and a cup of coffee">
              </div>
             </section>
         
