--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Conscious Coffee</title>
-        <meta name="description" content="Welcome to our homepage">
+        <title>Our coffeeshops</title>
+        <meta name="description" content="Where our coffeeshops are placed">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
 
