--- a/about.html
+++ b/about.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Conscious Coffee</title>
-        <meta name="description" content="Welcome to our homepage">
+        <title>About us</title>
+        <meta name="description" content="Get to know more about us">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
 
         <link href="CSS/styles.css" rel="stylesheet">
+
+        
 
     </head>
     <body>
