--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -63,13 +63,9 @@
             <section class="container_opening">
                 <div class="item">
                     <h3>Opening Hours</h3>
-                    <p>Monday: Closed</p>
-                    <p>Tuesday: 10:00 – 16:00</p>
-                    <p>Wednesday: 10:00 – 16:00</p>
-                    <p>Thursday: 10:00 – 16:00</p>
-                    <p>Friday: 10:00 – 19:00</p>
+                    <p>Monday - Friday 08:00 - 23:00</p>
                     <p>Saturday: 9:00 – 16:00</p>
-                    <p>Sunday: 9:00 – 13:00</p>
+                    <p>Sunday: 9:00 – 21:00</p>
                 </div>
     
             </section>
