--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -43,6 +43,7 @@
         
 
         <section class="container_about">
+            <h2>Our coffeeshops</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Ipsam repellat quis illum, vero recusandae totam laboriosam reiciendis 
             beatae mollitia ullam doloremque at libero? Impedit possimus nisi quibusdam 
