--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
         
 
         <section class="container_about">
+            <h2>About</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Ipsam repellat quis illum, vero recusandae totam laboriosam reiciendis 
             beatae mollitia ullam doloremque at libero? Impedit possimus nisi quibusdam 
