--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         
 
         <section class="container_about">
-            <h2>Contanct</h2>
+            <h2>Contact</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Ipsam repellat quis illum, vero recusandae totam laboriosam reiciendis 
             beatae mollitia ullam doloremque at libero? Impedit possimus nisi quibusdam 
