--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -44,10 +44,50 @@
 
         <section class="container_about">
             <h2>Our coffeeshops</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Ipsam repellat quis illum, vero recusandae totam laboriosam reiciendis 
-            beatae mollitia ullam doloremque at libero? Impedit possimus nisi quibusdam 
-            saepe voluptas dolore?</p>
+            <p> We have several coffee shops in Norway and are located in the center of the largest cities.</p>
+
+            <h3>Conscious Coffee Oslo</h3>
+            <p>Easterstreet 23, 4030 Oslo</p>
+            <h3>Opening Hours</h3>
+                    <p>Monday - Friday 08:00 - 23:00</p>
+                    <p>Saturday: 9:00 – 16:00</p>
+                    <p>Sunday: 9:00 – 21:00</p>
+
+                    <h3>Conscious Coffee Bergen</h3>
+            <p>Sunshinestrees 43, 5050 Bergen</p>
+            <h3>Opening Hours</h3>
+                    <p>Monday - Friday 08:00 - 23:00</p>
+                    <p>Saturday: 9:00 – 16:00</p>
+                    <p>Sunday: 9:00 – 21:00</p>
+
+                    <h3>Conscious Coffee Stavanger</h3>
+            <p>Seastreet 10, 6054 Stavanger</p>
+            <h3>Opening Hours</h3>
+                    <p>Monday - Friday 08:00 - 23:00</p>
+                    <p>Saturday: 9:00 – 16:00</p>
+                    <p>Sunday: 9:00 – 21:00</p>
+
+                    <h3>Conscious Coffee Trondheim</h3>
+            <p>Sandnesgate 34, 7078 Trondheim</p>
+            <h3>Opening Hours</h3>
+                    <p>Monday - Friday 08:00 - 23:00</p>
+                    <p>Saturday: 9:00 – 16:00</p>
+                    <p>Sunday: Closed</p>
+
+                    <h3>Conscious Coffee Tromsø</h3>
+            <p>Funnystrees 19, 9865 Tromsø</p>
+            <h3>Opening Hours</h3>
+                    <p>Monday - Friday 08:00 - 23:00</p>
+                    <p>Saturday: 9:00 – 16:00</p>
+                    <p>Sunday: Closed</p>
+
+
+
+
+
+
+            
+            
 
     </section>
   
