--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -56,7 +56,7 @@
                     <p>Monday - Friday 08:00 - 23:00</p>
                     <p>Saturday: 9:00 – 16:00</p>
                     <p>Sunday: 9:00 – 21:00</p>
-                    <img src="Images/CoffeeshopOslo.jpg" class ="item_opening1" alt="Coffee shop Oslo">
+                    <img src="Images/CoffeeshopOslo.jpg" class ="item_opening1" alt="Coffee-shop Oslo">
             </div>
            
 
@@ -68,6 +68,7 @@
                     <p>Monday - Friday 08:00 - 23:00</p>
                     <p>Saturday: 9:00 – 16:00</p>
                     <p>Sunday: 9:00 – 21:00</p>
+                    <img src="Images/coffeeshopbergen.jpg" class ="item_opening1" alt="Coffee-shop Bergen">
                 </div>
 
 
