--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -79,6 +79,7 @@
                     <p>Monday - Friday 08:00 - 23:00</p>
                     <p>Saturday: 9:00 – 16:00</p>
                     <p>Sunday: 9:00 – 21:00</p>
+                    <img src="Images/coffeeshopStavanger.jpg" class ="item_opening1" alt="Coffee-shop Stavanger">
                 </div>
 
                 <div class="item_opening">
