--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -89,6 +89,8 @@
                     <p>Monday - Friday 08:00 - 23:00</p>
                     <p>Saturday: 9:00 – 16:00</p>
                     <p>Sunday: Closed</p>
+                    <img src="Images/coffeeshoptrondheim.jpg" class ="item_opening1" alt="Coffee-shop Trondheim">
+                </div>
               
 
                     <div class="item_opening">
@@ -98,6 +100,7 @@
                     <p>Monday - Friday 08:00 - 23:00</p>
                     <p>Saturday: 9:00 – 16:00</p>
                     <p>Sunday: Closed</p>
+                    <img src="Images/coffeeshoptromso.jpg" class ="item_opening1" alt="Coffee-shop Tromsø">
                 </div>
     </section>
   
