--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -90,7 +90,7 @@
                     <p>Saturday: 9:00 – 16:00</p>
                     <p>Sunday: Closed</p>
                     <img src="Images/coffeeshoptrondheim.jpg" class ="item_opening1" alt="Coffee-shop Trondheim">
-                </div>
+                </div>| 
               
 
                     <div class="item_opening">
