--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="container_icon">
             <h2>If you want to follow us check out our instagram and snapchat</h2>
             <div class="itemicon">
-                <img src="Images/instagram.png" alt="Instagramicon">
+                <img src="Images/instagram (1).png" alt="Instagramicon">
                 <img src="Images/snapchat.png" alt="Snapchaticon">
 
 
