--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
             <h2>If you want to follow us check out our instagram and snapchat</h2>
             <div class="itemicon">
                 <img src="Images/instagram (1).png" alt="Instagramicon">
+            </div>
+                <div class="itemicon">
                 <img src="Images/snapchat.png" alt="Snapchaticon">
-        </div>
+                </div>
     
          
         </main>
