--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -73,8 +73,8 @@
 
 
                 <div class="item_opening">
-                    <h3>Conscious Coffee Bergen</h3>
-            <p>Sunshinestrees 43, 5050 Bergen</p>
+                    <h3>Conscious Coffee Stavanger</h3>
+            <p>Sandnesgate 22, 6054 Stavanger</p>
             <h5>Opening Hours</h5>
                     <p>Monday - Friday 08:00 - 23:00</p>
                     <p>Saturday: 9:00 – 16:00</p>
