--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     </section>
   
     <section class="container_icon">
+        
+        <div class="item_icon">
             <h2>Follow us</h2>
+        </div>
+            
             <div class="item_icon">
                 <img src="Images/instagram (1).png" class="img_icon" alt="Instagramicon">
                 <img src="Images/snapchat.png" class="img_icon" alt="Snapchaticon">
