--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </a>
           </div>
            
-<label for="hamburger-menu"><img src="images/square.png" class= square></label>
+<label class="hamburger-menu"><img src="images/square.png" class= square></label>
             <input type="checkbox" id="hamburger-menu">
             <nav>
                 <ul>
@@ -55,7 +55,7 @@
     </section>
   
     <section class="container_icon">
-        
+
         <div class="item_icon">
             <h2>Follow us</h2>
         </div>
