--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -20,7 +20,7 @@
           </a>
           </div>
 
-          <label for="hamburger-menu"><img src="images/square.png" class= square></label>
+          <label class="hamburger-menu"><img src="images/square.png" class= square></label>
             <input type="checkbox" id="hamburger-menu">
             <nav>
                 <ul>
