--- a/contact.html
+++ b/contact.html
@@ -119,5 +119,6 @@
           
             Copyright &copy;
         </footer>
+        <script src ="js/contact.js"></script>
     </body>
 </html>
