--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                   <p>CONSCIOUS COFFEES</p>
                   <p>Sunfun 213</p>
                   <p>N-5003 Bergen</p>
-                  <p>connsciouscoffees@mail.no</p>
+                  <p>connsciouscoffees@.no</p>
                   
                 </div>
         
