--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -36,7 +36,7 @@
         <main>
             
             <section class="container_welcome">
-            <div class="img-header">
+            <div class="img-header2">
                 <img src="Images/But-first-coffee.jpg" alt="Coffee sign says, but coffee first">
              </div>
             </section>
