--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <main>
             
             <section class="container_welcome">
-            <div class="img-header2">
+            <div class="img-header">
                 <img src="Images/coffeepink.jpg" alt="calm pink and a cup of coffee">
              </div>
             </section>
