--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <main>
             
             <section class="container_welcome">
-            <div class="img-header2">
+            <div class="img-header">
                 <img src="Images/coffeebeans.jpg" alt="Hands holding coffee beans">
                
              </div>
