--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Conscious Coffee</title>
+        <title>Conscious Coffee | Home</title>
         <meta name="description" content="Welcome to our homepage">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
