--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,7 @@
             <section class="container">
 
                    
-      <a href="index.html">
-        <div class="logo-text">
-            <h1>CONSCIOUS COFFEE</h1>
-          </a>
-          </div>
+              <a href="index.html" class="logo-text"><h1>CONSCIOUS COFFEE</h1></a>
 
           <label class="hamburger-label" for="hamburger-menu"><img src="images/square.png" class= square></label>
           <input type="checkbox" id="hamburger-menu">
