--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <main>
             
             <section class="container_welcome">
-            <div class="img-header">
+            <div class="img-headerthis">
                 <img src="Images/coffeepink.jpg" alt="calm pink and a cup of coffee">
              </div>
             </section>
