--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                 </div>
                     
                     <div class="item_icon">
-                        <img src="Images/instagram (1).png" class="img_icon" alt="Instagramicon">
-                        <img src="Images/snapchat.png" class="img_icon" alt="Snapchaticon">
+                        <img src="images/facebook.png" class="img_icon" alt="Facebookicon">
+                        <img src="images/instagram (1).png" class="img_icon" alt="Instagramicon">
+                        <img src="images/snapchat.png" class="img_icon" alt="Snapchaticon">
+                        <img src="images/twitter.png" class="img_icon" alt="twittericon">
                     </div>
                     </section>
             Copyright &copy;
