--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="checkbox" id="hamburger-menu" />
         <nav>
           <ul>
-            <li><a href="index.html" class="current"> Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact us</a></li>
             <li><a href="coffeeshops.html">Our coffee shops</a></li>
