--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <section class="container">
+      <section class="containernav">
         <a href="index.html" class="logo-text"><h1>CONSCIOUS COFFEE</h1></a>
 
         <label class="hamburger-label" for="hamburger-menu"
