--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="containerForm">
-          <form id="contactForm"></form>
+          <form id="contactForm">
           <div class="label2">
             <label>
               Name (required)
@@ -94,6 +94,7 @@
             </div>
           </div>
         </div>
+      </form>
       </section>
     </main>
 
