--- a/contact.html
+++ b/contact.html
@@ -52,49 +52,51 @@
 
         <div class="containerForm">
           <form id="contactForm">
-          <div class="label2">
-            <label>
-              Name (required)
-              <input name="name" id="name" />
-            </label>
-            <div class="form-error" id="nameError">Please enter your name</div>
-          </div>
-
-          <div class="label2">
-            <label>
-              Last name (required)
-              <input name="lastName" id="lastName" />
-            </label>
-            <div class="form-error" id="lastNameError">
-              Please enter you last name
+            <div class="label2">
+              <label>
+                Name (required)
+                <input name="name" id="name" />
+              </label>
+              <div class="form-error" id="nameError">
+                Please enter your name
+              </div>
             </div>
-          </div>
 
-          <div class="label2">
-            <label>
-              Email
-              <input name="email" id="email" />
-            </label>
-            <div class="form-error" id="emailError">
-              Please enter a valid email adress
+            <div class="label2">
+              <label>
+                Last name (required)
+                <input name="lastName" id="lastName" />
+              </label>
+              <div class="form-error" id="lastNameError">
+                Please enter you last name
+              </div>
             </div>
-          </div>
 
-          <div class="containerMessage">
-            <legend>
-              *Send us a message, your message must be a minemum of 10
-              characters
-            </legend>
-            <textarea placeholder="Message"></textarea>
-
-            <div class="character-count">Character count:<span>0</span></div>
-
-            <div>
-              <button type="submit" disabled>Send</button>
+            <div class="label2">
+              <label>
+                Email
+                <input name="email" id="email" />
+              </label>
+              <div class="form-error" id="emailError">
+                Please enter a valid email adress
+              </div>
             </div>
-          </div>
+
+            <div class="containerMessage">
+              <legend>
+                *Send us a message, your message must be a minemum of 10
+                characters
+              </legend>
+              <textarea placeholder="Message"></textarea>
+
+              <div class="character-count">Character count:<span>0</span></div>
+
+              <div>
+                <button type="submit" disabled>Send</button>
+              </div>
+            </div>
+          </form>
         </div>
-      </form>
       </section>
     </main>
 
