--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact us</a></li>
             <li><a href="coffeeshops.html">Our coffee shops</a></li>
+            <input type="text" class="input8" placeholder="Seach..." />
           </ul>
         </nav>
       </section>
