--- a/coffeeshops.html
+++ b/coffeeshops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Conscious Coffee | Our coffeeshops</title>
+    <title>Our coffeeshops | Conscious Coffee</title>
     <meta name="description" content="Where our coffeeshops are placed" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
