--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Conscious Coffee | Home</title>
+    <title>Home | Conscious Coffee</title>
     <meta name="description" content="Welcome to our homepage" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
@@ -28,9 +28,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact us</a></li>
             <li><a href="coffeeshops.html">Our coffee shops</a></li>
-            <input type="text" class="input8" placeholder="Seach..." />
           </ul>
         </nav>
+        <input type="text" class="input8" placeholder="Seach..." />
       </section>
     </header>
 
