--- a/index.html
+++ b/index.html
@@ -54,33 +54,80 @@
       </section>
 
       <section class="container_about">
-        <h2>Home</h2>
+        <h2>About</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p> <br></br>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
           repellat quis illum, vero recusandae totam laboriosam reiciendis
           beatae mollitia ullam doloremque at libero? Impedit possimus nisi
           quibusdam saepe voluptas dolore?
         </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p><br></br>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        <div class="thisimg">
+          <img src="images/coffeesign.jpg"  alt="Coffee sign">
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+          repellat quis illum, vero recusandae totam laboriosam reiciendis
+          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+          quibusdam saepe voluptas dolore?
+        </p>
+        
       </section>
     </main>
 
-    <footer>
-      <section class="container_icon">
-        <div class="item_icon">
-          <h2>Follow us</h2>
-        </div>
-
-        <div class="item_icon">
-          <img src="images/facebook.png" class="img_icon" alt="Facebook icon" />
-          <img
-            src="images/instagram.png"
-            class="img_icon"
-            alt="Instagram icon"
-          />
-          <img src="images/snapchat.png" class="img_icon" alt="Snapchat icon" />
-        </div>
-      </section>
-      Copyright &copy;
-    </footer>
+    <footer>Copyright &copy;</footer>
   </body>
 </html>
