--- a/about.html
+++ b/about.html
@@ -39,34 +39,59 @@
     </header>
 
     <main>
-      <section class="container_about">
-        <h2>About</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
-          repellat quis illum, vero recusandae totam laboriosam reiciendis
-          beatae mollitia ullam doloremque at libero? Impedit possimus nisi
-          quibusdam saepe voluptas dolore?
-        </p>
+      <section class="container_welcome2">
+        <div class="welcome_text">
+          <h3>Welcome to us</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+            repellat quis illum, vero recusandae totam laboriosam reiciendis
+            beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+            quibusdam saepe voluptas dolore?
+          </p>
+        </div>
+        <div class="welcome_text">
+          <h3>Our online shop</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+            repellat quis illum, vero recusandae totam laboriosam reiciendis
+            beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+            quibusdam saepe voluptas dolore?
+          </p>
+        </div>
+
+        <div class="welcome_text">
+          <h3>A place to relax</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam
+            repellat quis illum, vero recusandae totam laboriosam reiciendis
+            beatae mollitia ullam doloremque at libero? Impedit possimus nisi
+            quibusdam saepe voluptas dolore?
+          </p>
+        </div>
+        <div class="welcome_text">
+          <h3>If you like to contact us</h3>
+          <p>SunnyStreet 56 5004 Bergen CONSCIOUS COFFEE@gmail.com</p>
+          <div class="item_icon">
+            <img
+              src="images/facebook.png"
+              class="img_icon"
+              alt="Facebook icon"
+            />
+            <img
+              src="images/instagram.png"
+              class="img_icon"
+              alt="Instagram icon"
+            />
+            <img
+              src="images/snapchat.png"
+              class="img_icon"
+              alt="Snapchat icon"
+            />
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer>
-      <section class="container_icon">
-        <div class="item_icon">
-          <h2>Follow us</h2>
-        </div>
-
-        <div class="item_icon">
-          <img src="images/facebook.png" class="img_icon" alt="Facebook icon" />
-          <img
-            src="images/instagram.png"
-            class="img_icon"
-            alt="Instagram icon"
-          />
-          <img src="images/snapchat.png" class="img_icon" alt="Snapchat icon" />
-        </div>
-      </section>
-      Copyright &copy;
-    </footer>
+    <footer>Copyright &copy;</footer>
   </body>
 </html>
